--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,3 @@
-/* Reset default styles */
-body {
-    margin: 0;
-    padding: 0;
-}
 
 /* Main container for image and login box */
 .main-container {
@@ -67,27 +62,11 @@ body {
     border-radius: 5px;
 }
 
-/*Button design */
-.login-box button {
+/*Buttons design */
+.btn-login-submit,.btn-login-register {
     padding: 10px 20px;
-    background-color: var(--button);
-    color: var(--lightbeigh0);
-    border: none;
     border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
     width: 100%;
-    margin-top: 10px;
-}
-
-.login-box button:hover {
-    background-color: var(--lightbeigh0);
-    border: 1.5px solid var(--button);
-    color: var(--button);
-}
-
-.secondary-btn {
-    background-color: transparent;
     margin-top: 10px;
 }
 
@@ -105,4 +84,5 @@ body {
 h1 {
     color: #333;
     margin-bottom: 20px;
+
 }
